# primer

./: .gitattributes
RetinaData/: whitenoise.raw
docs/: README.md  optimization_notes.cn.md  optimization_notes.md  retina_reproduction_plan.md
python/: README.cn.md  README.md  dashboard.py  generate_test_data.py  pyproject.toml  requirements.txt  run_retina_analysis.py
python/output/: dashboard.html  dashboard_en.html  dashboard_zh.html  timing.json
python/src/primer/: __init__.py  glm.py  io.py  mne_model.py  plotting.py  prediction.py  preprocessing.py  sta.py  stc.py  validation.py
python/themes/: dark_neuron.css  minimal_light.css  modern_purple.css  ocean_breeze.css  warm_earth.css
